--- a/index.html
+++ b/index.html
@@ -17,6 +17,220 @@
     </head>
 
     <body>
+        <!-- スライドメニュー -->
+        <nav>
+            <!-- 開くボタン -->
+        </nav>
+        <!-- /スライドメニュー -->
+
+
+        <header id="header">
+            <h1>
+                <a href="#"><img src="images/logo-r.svg" alt=""></a>
+            </h1>
+        </header><!-- /header -->
+
+        <div id="home">
+            <div class="home-title-contentsa">
+                <h2 class="page-title">
+                    話して学ぼう！<br>
+                    BBB英会話スクール
+                </h2>
+                <button class="start-free-trial">
+                    無料体験はこちら
+                </button>
+            </div>      
+        </div><!-- /home -->
+
+        <main>
+            <section id="choice">
+                <h3 class="section-title">BBBが選ばれる理由</h3>
+            </section><!-- /choice -->
+
+            <section id="online-native">
+                <div class="inner">
+                    <div class="online-native-left">
+                        <div class="online-native-items">
+                            <img src="images/icon-pc.png">
+                            <div class="online-native-item">
+                                <h4>オンライン対応</h4>
+                                <p>24時間いつでも受講できる！</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="online-native-right">
+                        <div class="online-native-items">
+                            <img src="images/icon-teacher.png">
+                            <div class="online-native-item">
+                                <h4>講師はネイティブ</h4>
+                                <p>お気に入りの講師が自由に選べる！</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section><!-- /online-native -->
+
+            <section id="voice" class="inner">
+                <h3 class="section-title">受講生の声</h3>
+                <div class="voice-contents">
+                    <div class="profile">
+                        <div class="profile-img">
+                            <img src="images/icon-student1.png">
+                            <span>○○○さん</span>
+                            <span>大学生</span>
+                        </div>
+                        <div class="profile-text">
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <div class="profile-img">
+                            <img src="images/icon-student2.png">
+                            <span>○○○さん</span>
+                            <span>会社員</span>
+                        </div>
+                        <div class="profile-text">
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                    <div class="profile">
+                        <div class="profile-img">
+                            <img src="images/icon-student3.png">
+                            <span>○○○さん</span>
+                            <span>自営業</span>
+                        </div>
+                        <div class="profile-text">
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section><!-- /voice -->
+
+            <section id="summary">
+                <div class="inner">
+                    <h3 class="section-title">スクールの概要</h3>
+                    <div class="summary-items">
+                        <div class="summary-item">
+                            <h4>
+                                <span class="ja">レッスン内容</span>
+                                <span class="en">LESSON</span>
+                            </h4>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                    <div class="summary-items">
+                        <div class="summary-item">
+                            <h4>
+                                <span class="ja">料金プラン</span>
+                                <span class="en">PRICE</span>
+                            </h4>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                    <div class="summary-items">
+                        <div class="summary-item">
+                            <h4>
+                                <span class="ja">講師のご紹介</span>
+                                <span class="en">TEACHER</span>
+                            </h4>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                    <div class="summary-items">
+                        <div class="summary-item">
+                            <h4>
+                                <span class="ja">BBBのQ&A</span>
+                                <span class="en">Q&A</span>
+                            </h4>
+                            <p>
+                                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section><!-- /summary -->
+
+            <section id="free-trail" class="inner">
+                <h3 class="section-title">まずは無料で、BBBの英会話を試してみませんか？</h3>
+                <p>今なら初月のレッスンを特別価格で受講できる割引クーポンをプレゼント！</p>
+                <button class="start-free-trial-second">
+                    無料体験に申し込む
+                </button>
+            </section><!-- /free-trail -->
+        </main><!-- /main -->
+
+        <footer id="footer">
+            <div class="inner">
+                <ul class="footer-items">
+                    <li class="footer-item">
+                        <h4>コース一覧</h4>
+                        <ul>
+                            <li><a href="#">スタンダードプラン</a></li>
+                            <li><a href="#">プレミアムプラン</a></li>
+                            <li><a href="#">短期集中プラン</a></li>
+                            <li><a href="#">日常英会話コース</a></li>
+                            <li><a href="#">ビジネス英会話コース</a></li>
+                        </ul>
+                    </li>
+                    <li class="footer-item">
+                        <h4>講師紹介</h4>
+                        <ul>
+                            <li><a href="#">講師について</a></li>
+                            <li><a href="#">講師一覧</a></li>
+                            <li><a href="#">講師を探す</a></li>
+                        </ul>                        
+                    </li>
+                    <li class="footer-item">
+                        <h4>会社情報</h4>
+                        <ul>
+                            <li><a href="#">会社概要</a></li>
+                            <li><a href="#">採用情報</a></li>
+                        </ul>
+                    </li>
+                    <li class="footer-item">
+                        <h4>BBBについて</h4>
+                        <ul>
+                            <li><a href="#">よくあるご質問</a></li>
+                            <li><a href="#">ご利用規約</a></li>
+                            <li><a href="#">プライバシーポリシー</a></li>
+                            <li><a href="#">お問い合わせ</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="copy">&copy; BBB English School</div>
+            </div>
+        </footer><!-- /footer -->
+
+
+
+        <!-- <ul class="flex-container">
+            <li>アイテム1</li>
+            <li>アイテム2</li>
+            <li>アイテム3</li>
+            <li>アイテム4</li>
+        </ul> -->
+        
         
     </body>
 </html>
