--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"/>
     <!-- CSS -->
         <link rel="stylesheet" href="./css/style.css">
-        <script src="./js/scrippt.js" defer></script>
+        <script src="./js/script.js" defer></script>
     </head>
 
     <body>
