fadeIn Animation Coding

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         </header><!-- /header -->
 
         <div id="home">
-            <ul class="slide-img">
-                <li><img src="images/" alt=""></li>                
+            <ul class="fade"> <!-- スライドイメージ -->
+                <li><img src="images/mainvisual1.jpg" alt=""></li>
+                <li><img src="images/mainvisual2.jpg" alt=""></li>
+                <li><img src="images/mainvisual3.jpg" alt=""></li>
             </ul>
 
-
-            
             <div class="home-title-contents">
                 <h2 class="page-title">
                     話して学ぼう！<br>
@@ -229,6 +229,6 @@
                 </ul>
                 <div class="copy">&copy; BBB English School</div>
             </div>
-        </footer><!-- /footer -->    
+        </footer><!-- /footer -->
     </body>
 </html>
