JavaScript Coding Finish

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
         <!-- スライドメニュー -->
         <nav>
             <!-- 開くボタン -->
+            <button id="menu-open" class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <!-- スライドメニューパネル -->
+            <div id="menu-panel">
+                <h1 class="slide-logo">
+                    <img src="images/logo-w.svg" alt="">
+                </h1>
+                <!-- メニューリスト -->
+                <ul class="menu-list">
+                    <li><a href="#">BBBが選ばれる理由</a></li>
+                    <li><a href="#">受講生の声</a></li>
+                    <li><a href="#">スクールの概要</a></li>
+                    <button>無料体験に申し込む</button>
+                </ul>
+            </div>
         </nav>
         <!-- /スライドメニュー -->
 
